# AI-Function-Agent

./: .gitignore  README.md  api_spec.md  config.json  functions.py  pyproject.toml  requirements.txt  tool_calling.py
functions/system/: ask_age.py  ddg_search.py  get_weather.py  image_gen.py  memory.py
functions/user/: say_hello.py
src/ai_function_agent/: server.py  tool_calling.py
src/ai_function_agent/functions/system/: ddg_search.py  get_weather.py  image_gen.py  memory.py
src/ai_function_agent/functions/user/: print_message.py
