[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_function_agent"
version = "0.0.1"
authors = [
    {name = "Column01", email = "column01dev@gmail.com"},
]
description = "A customizable AI Function Agent for your own automation needs"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "duckduckgo-search",
    "openai",
    "transformers",
    "usearch",
]

[project.scripts]
ai-function-agent = "ai_function_agent.tool_calling:main"
